jenkins/01-jenkins-namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: dqjenkins-ns
  labels:
    name: dqjenkins-ns
    project: dq
    env: prod
