jenkins/06-jenkins-ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  labels:
    name: dqjenkins-ingress
    project: dq
    env: prod
    app: jenkins
  namespace: dqjenkins-ns
  name: dqjenkins-ingress
  annotations:
    nginx.ingress.kubernetes.io/proxy-body-size: 200m
    kubernetes.io/ingress.class: nginx
    # nginx.ingress.kubernetes.io/ssl-redirect: "false"
    # nginx.ingress.kubernetes.io/add-base-url: "true"
    # nginx.ingress.kubernetes.io/app-root: /jenkins
    nginx.ingress.kubernetes.io/ssl-passthrough: "true"
    nginx.ingress.kubernetes.io/affinity: "cookie"
    nginx.ingress.kubernetes.io/session-cookie-name: "route"
    nginx.ingress.kubernetes.io/session-cookie-hash: "sha1"
    nginx.ingress.kubernetes.io/cors-allow-credentials: "true"
    nginx.ingress.kubernetes.io/cors-allow-headers: Authorization, origin, accept
    nginx.ingress.kubernetes.io/cors-allow-methods: GET, OPTIONS
    nginx.ingress.kubernetes.io/enable-cors: "true"
spec:
  rules:
    # - host: "jenkins"
    - http:
        paths:
          - backend:
              serviceName: dqjenkins-svc
              servicePort: 8080
            path: /jenkins
